--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -30,71 +30,6 @@
           <div class="logo-mini"><img src="{[ BASE_URL ]}images/terrama2_logo2.png" class="img-square" alt="User Image"></div>
         </a>
         <!-- Header Navbar -->
-        <nav id="nav" class="navbar navbar-static-top" role="navigation">
-          <!-- Sidebar toggle button-->
-          <a href="#" class="sidebar-toggle" full_screen="true" data-toggle="offcanvas" role="button">
-            <span class="sr-only">Toggle navigation</span>
-          </a>
-          <div style="text-align:center">
-            <span class="imgs"><img src="{[ BASE_URL ]}images/inpe.png"></span>
-            <span class="imgs"><img src="{[ BASE_URL ]}images/defra.png"></span>
-            <span class="imgs"><img src="{[ BASE_URL ]}images/banco_mundial.png"></span>
-            <span class="imgs"><img id="mma" src="{[ BASE_URL ]}images/mma.png"></span>
-            <span class="imgs"><img src="{[ BASE_URL ]}images/funcate.png"></span>
-
-            {% if (currentUser !== null) %}
-            <div class="navbar-custom-menu" id="user-nav">
-              <ul class="nav navbar-nav">
-                <li class="dropdown user user-menu">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-                    <span class="hidden-xs user-name">{[ currentUser.name ]}</span>
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li class="user-header" style="height: auto;">
-                      <p class="user-name">{[ currentUser.name ]}</p>
-                    </li>
-                    <li class="user-footer">
-                      <div class="pull-right"><a href="{[ BASE_URL ]}logout" class="btn btn-default btn-flat" id="signout">Sign out</a></div>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-            {% endif %}
-            {% if (currentUser === null) %}
-            <div class="navbar-custom-menu" id="login-nav">
-              <ul class="nav navbar-nav">
-                <li class="dropdown user user-menu">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-                    <span class="hidden-xs">Login</span>
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li class="user-body">
-                      <form method="POST" action="{[ BASE_URL ]}login">
-                        <div class="form-group has-feedback">
-                          <input type="text" class="form-control" placeholder="Username" name="username" id="username">
-                          <span class="fa fa-user form-control-feedback"></span>
-                        </div>
-                        <div class="form-group has-feedback">
-                          <input type="password" class="form-control" placeholder="Password" name="password" id="password">
-                          <span class="fa fa-key form-control-feedback"></span>
-                        </div>
-                        <div class="row">
-                          <div class="col-md-12">
-                            <button type="submit" name="btnLogin" class="btn btn-primary btn-block btn-flat" id="signin">
-                              <span ng-bind="i18n.__('Sign In')" class="ng-binding">Sign In</span>
-                            </button>
-                          </div>
-                        </div>
-                      </form>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-            {% endif %}
-          </div>
-        </nav>
       </header>
       
       <!-- Left side column. contains the logo and sidebar -->
@@ -105,14 +40,10 @@
 
           <!-- Sidebar Menu -->
           <ul class="sidebar-menu">
-            <div class="form-group" style="margin: 10px;">
-              <label>Projects:</label>
-              <select class="form-control" id="projects" name="projects"></select>
-            </div>
-            <li class="header">VIEWS</li>
+            <select class="form-control" id="projects" name="projects"></select>
             <!-- Optionally, you can add icons to the links -->
             <div id="terrama2-layerexplorer"></div>
-            <form onsubmit="return false" class="form-inline"> 
+            <form onsubmit="return false" class="form-inline" style="margin-top: 10px;"> 
               <div class="form-group">
                 <input id='wmsUri' class="form-control" type='search' placeholder='WMS URI'> <button id='addLayers' type='submit' class="btn btn-default">Add</button>
               </div>
@@ -122,12 +53,20 @@
           </ul>
           <!-- /.sidebar-menu -->
         </section>
-        <!--
-        <div id="mini-toggle" data-toggle="offcanvas">
-           <span class="glyphicon glyphicon-menu-left"></span> 
+        <div id="institutions-logos">
+          <span class="imgs">
+            <img id="inpe-image" src="{[ BASE_URL ]}images/inpe.png">
+          </span>
+          <span class="imgs">
+            <img id="programa-queimadas-image" src="{[ BASE_URL ]}images/programa_queimadas.png">
+          </span>
+          <span class="imgs">
+            <img id="defra-image" src="{[ BASE_URL ]}images/defra.png">
+          </span>
+          <span class="imgs">
+            <img id="world-bank-image" src="{[ BASE_URL ]}images/banco_mundial.png">
+          </span>
         </div>
-        -->
-        <!-- /.sidebar -->
       </aside>
 
       <!-- Content Wrapper. Contains page content -->
@@ -135,71 +74,93 @@
 
         <!-- Main content -->
         <div id="content" class="content">
-          <div id="show-menu">
-            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" full_screen="true" role="button">
-              <span class="sr-only">Toggle navigation</span>
-            </a>
-          </div>
           {% set webadminHostInfo = webadminHostInfo || {} %}
           {% set webmonitorHostInfo = webmonitorHostInfo || {} %}
           {% set message = message || {} %}
 
           <div id="terrama2-map" class="terrama2-map cursor-move">
-              <div id="legend-box">
-                <div class="legend-header">Legends</div>
-                <div class="legend-body"><strong>No data to show.</strong></div>
-              </div>
-              <div id="layer-toolbox" class="hidden">
-                <div class="layer-toolbox-header">Layer Tools<span class="btn btn-default" style="padding: 0 4px 0 4px; float: right;"><i class="fa fa-close"></i></span></div>
-                <div class="layer-toolbox-body">
-                  <div class="layer-name"></div>
-                  <hr style="margin: 10px 0 10px 0;"/>
-                  <div id="slider-box"></div>
-                  <div id="exportation-box">
-                    <div id="exportation-status" class="hidden">
-                      <div>
-                        <span></span>
-                        <div class="progress progress-sm active hidden">
-                          <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-                            <span class="sr-only">0% Complete</span>
-                          </div>
+            <div id="legend-box">
+              <div class="legend-header">Legends</div>
+              <div class="legend-body"><strong>No data to show.</strong></div>
+            </div>
+            <div id="layer-toolbox" class="hidden">
+              <div class="layer-toolbox-header">Layer Tools<span class="btn btn-default" style="padding: 0 4px 0 4px; float: right;"><i class="fa fa-close"></i></span></div>
+              <div class="layer-toolbox-body">
+                <div class="layer-name"></div>
+                <hr style="margin: 10px 0 10px 0;"/>
+                <div id="slider-box"></div>
+                <div id="exportation-box">
+                  <div id="exportation-status" class="hidden">
+                    <div>
+                      <span></span>
+                      <div class="progress progress-sm active hidden">
+                        <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                          <span class="sr-only">0% Complete</span>
                         </div>
                       </div>
                     </div>
-                    <select multiple id="exportation-type" class="form-control">
-                      <option value="all">All Formats</option>
-                      <option selected value="csv">CSV</option>
-                      <option value="geojson">GeoJSON</option>
-                      <option value="kml">KML</option>
-                      <option value="shapefile">Shapefile</option>
-                    </select>
-                    <button id="export" type="button" class="btn btn-default" style="margin-top: 10px;">Export Data</button>
                   </div>
+                  <select multiple id="exportation-type" class="form-control">
+                    <option value="all">All Formats</option>
+                    <option selected value="csv">CSV</option>
+                    <option value="geojson">GeoJSON</option>
+                    <option value="kml">KML</option>
+                    <option value="shapefile">Shapefile</option>
+                  </select>
+                  <button id="export" type="button" class="btn btn-default" style="margin-top: 10px;">Export Data</button>
                 </div>
               </div>
-              <div id="map-tools">
-                <div id="moveMap" class="map-tool-button mouse-function-btn active"><button type="button"><i class="fa fa-hand-rock-o"></i></button></div>
-                <div id="legendsButton" class="map-tool-button mouse-function-btn"><button type="button"><i class="fa fa-list"></i></button></div>
-                <div id="tableButton" class="map-tool-button mouse-function-btn hidden"><button type="button"><i class="fa fa-table"></i></button></div>
-                <div id="getAttributes" class="map-tool-button mouse-function-btn hidden">
-                  <select class="form-control hidden"></select>
-                  <button type="button"><i class="fa fa-info"></i></button>
+            </div>
+            <div id="map-tools">
+              <div id="authentication-div" class="hidden">
+                {% if (currentUser !== null) %}
+                <p class="user-name" style="text-align: center; font-size: 15px; font-weight: 800;">{[ currentUser.name ]}</p>
+                <hr/>
+                <div class="pull-right"><a href="{[ BASE_URL ]}logout" class="btn btn-default btn-flat" id="signout">Sign out</a></div>
+                {% else %}
+                <form method="POST" action="{[ BASE_URL ]}login">
+                  <div class="form-group has-feedback">
+                    <input type="text" class="form-control" placeholder="Username" name="username" id="username">
+                    <span class="fa fa-user form-control-feedback"></span>
+                  </div>
+                  <div class="form-group has-feedback">
+                    <input type="password" class="form-control" placeholder="Password" name="password" id="password">
+                    <span class="fa fa-key form-control-feedback"></span>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <button type="submit" name="btnLogin" class="btn btn-primary btn-block btn-flat" id="signin">
+                        <span ng-bind="i18n.__('Sign In')" class="ng-binding">Sign In</span>
+                      </button>
+                    </div>
+                  </div>
+                </form>
+                {% endif %}
+              </div>
+              <div id="loginButton" class="map-tool-button"><button type="button"><i class="fa {% if (currentUser !== null) %}fa-user font-green{% else %}fa-user-times font-red{% endif %}"></i></button></div>
+              <div id="toggleButton" class="map-tool-button sidebar-toggle" full_screen="true" data-toggle="offcanvas" role="button"><button type="button"><i class="fa fa-arrows-alt"></i></button></div>
+              <div id="moveMap" class="map-tool-button mouse-function-btn active"><button type="button"><i class="fa fa-hand-rock-o"></i></button></div>
+              <div id="legendsButton" class="map-tool-button mouse-function-btn"><button type="button"><i class="fa fa-list"></i></button></div>
+              <div id="tableButton" class="map-tool-button mouse-function-btn hidden"><button type="button"><i class="fa fa-table"></i></button></div>
+              <div id="getAttributes" class="map-tool-button mouse-function-btn hidden">
+                <select class="form-control hidden"></select>
+                <button type="button"><i class="fa fa-info"></i></button>
+              </div>
+            </div>
+            <div id="table-div" style="display: none; height: 400px;">
+              <div class="main-div hidden">
+                <div id="attributes-table-select">
+                  <span>Layers:</span>
+                  <select class="form-control"></select>
+                </div>
+                <div style="clear: both; height: 5px;"></div>
+                <hr/>
+                <div style="clear: both; height: 5px;"></div>
+                <div id="attributes-table-div">
+                  <table class="table table-bordered table-hover" id="attributes-table"></table>
                 </div>
               </div>
-              <div id="table-div" style="display: none; height: 400px;">
-                <div class="main-div hidden">
-                  <div id="attributes-table-select">
-                    <span>Layers:</span>
-                    <select class="form-control"></select>
-                  </div>
-                  <div style="clear: both; height: 5px;"></div>
-                  <hr/>
-                  <div style="clear: both; height: 5px;"></div>
-                  <div id="attributes-table-div">
-                    <table class="table table-bordered table-hover" id="attributes-table"></table>
-                  </div>
-                </div>
-              </div>
+            </div>
           </div>
 
           <!-- Alert message -->
