--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -53,6 +53,9 @@
           </ul>
           <!-- /.sidebar-menu -->
         </section>
+        <span style="position: fixed; bottom: 60px; font-size: 15px; margin-left: 10px;">
+          <a href="#" id="about-btn" style="color: #b8c7ce;"><div class="fa fa-info"></div><span style="margin-left: 10px;">About</span></a>
+        </span>
         <div id="institutions-logos">
           <span class="imgs">
             <img id="inpe-image" src="{[ BASE_URL ]}images/inpe.png">
@@ -195,6 +198,25 @@
       <!-- Main Footer -->
       <footer class="main-footer"></footer>
       <footer class="footer-monitor"></footer>
+    </div>
+    <div id="about-dialog" title="About">
+      <div id="programa-cerrado-image"></div>
+      <p>
+        <span>
+          Projeto <em>Platform of Monitoring and Warning of Forest Fires in the Cerrado</em> (ProCerrado INPE)
+        </span>
+        <br/><br/>
+        Este projeto &eacute; parte integrante do Programa Cerrado, uma iniciativa de
+        coopera&ccedil;&atilde;o entre os governos do Brasil e do Reino Unido, com apoio do Banco Mundial. O Ministério do Meio Ambiente (MMA), por
+        meio de sua Secretaria de Mudan&ccedil;as Clim&aacute;ticas e Qualidade Ambiental (SMCQ), &eacute; o respons&aacute;vel pela coordena&ccedil;&atilde;o geral do programa.
+        O objetivo da iniciativa &eacute; contribuir para a mitiga&ccedil;&atilde;o da mudan&ccedil;a do clima e para melhoria da gest&atilde;o de recursos naturais no bioma
+        Cerrado por meio do aprimoramento de pol&iacute;ticas p&uacute;blicas e de pr&aacute;ticas de produtores rurais.
+      </p>
+      <p><span>PROJETO INPE</span></p>
+      <div id="projeto-inpe-image"></div>
+      <p><span>REALIZAÇÃO</span></p>
+      <div id="realizacao-image"></div>
+      <p style="margin-top: 40px;"><span>Plataforma digital para monitoramento e alerta de fogo na vegeta&ccedil;&atilde;o no Cerrado brasileiro (Banco Mundial TF018566)</span></p>
     </div>
     <script type="text/javascript" src="{[ BASE_URL ]}moment/moment.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}jquery/dist/jquery.min.js"></script>
