--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -174,7 +174,11 @@
                 <i class="fa fa-pencil-square-o "></i><span ng-bind="i18n.__('Profile')"></span>
               </a>
             </li>
-
+            <li class="treeview {% if (tabActive === 'about') %} active {% endif %}">
+              <a href="{[ BASE_URL ]}about/">
+                <i class="fa fa-info"></i><span ng-bind="i18n.__('About')"></span>
+              </a>
+            </li>
           </ul>
           <!-- /.ul sidebar -->
       </section>
@@ -197,12 +201,20 @@
       </section><!-- /.content -->
     </div><!-- /.content-wrapper -->
 
-    <footer class="main-footer">
-      <div class="pull-right hidden-xs">
-      </div>
-      <strong>Copyright &copy; 2007 National Institute For Space Research (INPE) - Brazil </strong> <span ng-bind="i18n.__('All rights reserved')"></span>.
-    </footer>
-
+    <div id="institutions-logos">
+      <span class="imgs">
+        <img id="inpe-image" src="{[ BASE_URL ]}images/inpe.png">
+      </span>
+      <span class="imgs">
+        <img id="programa-queimadas-image" src="{[ BASE_URL ]}images/programa_queimadas.png">
+      </span>
+      <span class="imgs">
+        <img id="defra-image" src="{[ BASE_URL ]}images/defra.png">
+      </span>
+      <span class="imgs">
+        <img id="world-bank-image" src="{[ BASE_URL ]}images/banco_mundial.png">
+      </span>
+    </div>
   </div>
   <!-- ./wrapper -->
 
@@ -236,6 +248,22 @@
         }).then(function(response) {
           collapsed = response.data.collapsed;
         });
+      });
+
+      $("#inpe-image").on('click', function() {
+        window.open('http://www.inpe.br/', '_blank');
+      });
+
+      $("#programa-queimadas-image").on('click', function() {
+        window.open('http://www.inpe.br/queimadas/', '_blank');
+      });
+
+      $("#defra-image").on('click', function() {
+        window.open('https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs', '_blank');
+      });
+
+      $("#world-bank-image").on('click', function() {
+        window.open('http://www.worldbank.org/', '_blank');
       });
     });
   </script>
