--- a/webapp/views/login.html
+++ b/webapp/views/login.html
@@ -40,6 +40,16 @@
             .countries-i18n .intl-tel-input .flag-container {
                 margin-top: 0 !important;
             }
+
+            #institutions-logos {
+                text-align: center;
+            }
+
+            .imgs img {
+                max-height: 40px;
+                padding: 3px;
+                cursor: pointer;
+            }
         </style>
     </head>
     <body class="hold-transition login-page" ng-controller="TerraMA2Controller">
@@ -81,6 +91,23 @@
                                 <span ng-bind="i18n.__('Sign In')"></span>
                             </button>
                         </div><!-- /.col -->
+                        <div class="col-md-12"><hr/></div>
+                        <div class="col-md-12">
+                            <div id="institutions-logos">
+                                <span class="imgs">
+                                    <img id="inpe-image" src="{[ BASE_URL ]}images/inpe.png">
+                                </span>
+                                <span class="imgs">
+                                    <img id="programa-queimadas-image" src="{[ BASE_URL ]}images/programa_queimadas.png">
+                                </span>
+                                <span class="imgs">
+                                    <img id="defra-image" src="{[ BASE_URL ]}images/defra.png">
+                                </span>
+                                <span class="imgs">
+                                    <img id="world-bank-image" src="{[ BASE_URL ]}images/banco_mundial.png">
+                                </span>
+                            </div>
+                        </div>
                     </div>
                 </form>
 
@@ -103,5 +130,23 @@
 
         <!-- TerraMA² Angular Module -->
         <script src="{[ BASE_URL ]}dist/terrama2-webapp.min.js"></script>
+
+        <script>
+            $("#inpe-image").on('click', function() {
+                window.open('http://www.inpe.br/', '_blank');
+            });
+
+            $("#programa-queimadas-image").on('click', function() {
+                window.open('http://www.inpe.br/queimadas/', '_blank');
+            });
+
+            $("#defra-image").on('click', function() {
+                window.open('https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs', '_blank');
+            });
+
+            $("#world-bank-image").on('click', function() {
+                window.open('http://www.worldbank.org/', '_blank');
+            });
+        </script>
     </body>
 </html>
