--- a/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
+++ b/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
@@ -695,3 +695,58 @@
   border-radius: 5px;
   border: 1px solid #c5c5c5;
 }
+
+#about-dialog {
+  display: none;
+  padding: 0 !important;
+}
+
+#programa-cerrado-image {
+  background-image: url('../images/about/header.png');
+  background-size: 800px;
+  background-repeat: no-repeat;
+  background-position: initial;
+  height: 830px;
+  width: 100%;
+  padding: 0 !important;
+  margin: 0 !important;
+  max-width: 100%;
+  margin-top: 4px !important;
+}
+
+#about-dialog > p {
+  margin: 10px;
+  text-align: center;
+  margin-top: 70px;
+}
+
+#about-dialog > p > span {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+#projeto-inpe-image {
+  background-image: url('../images/about/inpe.png');
+  background-size: 700px;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 130px;
+  width: 100%;
+  padding: 0 !important;
+  margin: 0 !important;
+  max-width: 100%;
+  margin-top: 4px !important;
+}
+
+#realizacao-image {
+  background-image: url('../images/about/realizacao.png');
+  background-size: 700px;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 130px;
+  width: 100%;
+  padding: 0 !important;
+  margin: 0 !important;
+  max-width: 100%;
+  margin-top: 4px !important;
+}
