--- a/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
+++ b/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
@@ -1,3 +1,7 @@
+html, body, .content, .content, .content-wrapper, #terrama2-map {
+  overflow: hidden !important;
+}
+
 .map {
   width: 100%;
 }
@@ -187,7 +191,7 @@
 }
 
 .sidebar-menu {
-  overflow: visible !important;
+  overflow-y: auto !important;
 }
 
 .sidebar-menu > div {
@@ -675,7 +679,7 @@
   width: 100%;
   height: 40px;
   font-size: 15px;
-  margin: 10px 0 10px 0;
+  margin: 10px 0 0 0;
 }
 
 #institutions-logos {
