--- a/webapp/public/javascripts/angular/views/templates/style.html
+++ b/webapp/public/javascripts/angular/views/templates/style.html
@@ -3,10 +3,11 @@
     <select class="form-control" name="styles" ng-change="$ctrl.changeCreationType()" ng-model="$ctrl.model.metadata.creation_type">
         <option value="0">{{$ctrl.i18n.__('Editor')}}</option>
         <option value="1">{{$ctrl.i18n.__('XML')}}</option>
+        <option value="2">Wind</option>
     </select>
 </div>
 
-<div ng-if="$ctrl.model.metadata.creation_type == '1' || $ctrl.model.metadata.creation_type == '2' ">
+<div ng-if="$ctrl.model.metadata.creation_type == '1'">
   <div class="col-md-12 terrama2-nopadding-box">
 
     <div class="col-md-8">
@@ -15,6 +16,31 @@
         <textarea class="form-control" ng-model="$ctrl.model.metadata.xml_style" style="height: 200px;"> </textarea>
       </div>
     </div>
+
+  </div>
+</div>
+
+<div ng-if="$ctrl.model.metadata.creation_type == '2'">
+  <div class="col-md-12 terrama2-nopadding-box">
+
+      <!-- ./col-md-6 Type -->
+      <div class="col-md-6">
+        <div class="form-group" terrama2-show-errors>
+          <label><span></span>Band1:</label>
+          <input class="form-control" 
+                ng-model="$ctrl.model.metadata.band1" 
+                type="text">
+        </div>
+      </div>
+      <!-- ./col-md-6 Type -->
+      <div class="col-md-6">
+        <div class="form-group" terrama2-show-errors>
+          <label><span></span>Band2:</label>
+          <input class="form-control" 
+                ng-model="$ctrl.model.metadata.band2" 
+                type="text">
+        </div>
+      </div>
 
   </div>
 </div>
