--- a/webapp/public/javascripts/angular/views/templates/style.html
+++ b/webapp/public/javascripts/angular/views/templates/style.html
@@ -3,7 +3,7 @@
     <select class="form-control" name="styles" ng-change="$ctrl.changeCreationType()" ng-model="$ctrl.model.metadata.creation_type">
         <option value="0">{{$ctrl.i18n.__('Editor')}}</option>
         <option value="1">{{$ctrl.i18n.__('XML')}}</option>
-        <option value="2">Wind</option>
+        <option ng-if="$ctrl.type === $ctrl.DataSeriesType.GRID" ng-repeat="option in $ctrl.predefinedStyles" value="{{option.id}}">{{option.name}}</option>
     </select>
 </div>
 
@@ -20,27 +20,10 @@
   </div>
 </div>
 
-<div ng-if="$ctrl.model.metadata.creation_type == '2'">
+<div ng-if="$ctrl.model.metadata.creation_type != '0' && $ctrl.model.metadata.creation_type != '1' && $ctrl.model.metadata.creation_type != undefined">
   <div class="col-md-12 terrama2-nopadding-box">
-
-      <!-- ./col-md-6 Type -->
-      <div class="col-md-6">
-        <div class="form-group" terrama2-show-errors>
-          <label><span></span>Band1:</label>
-          <input class="form-control" 
-                ng-model="$ctrl.model.metadata.band1" 
-                type="text">
-        </div>
-      </div>
-      <!-- ./col-md-6 Type -->
-      <div class="col-md-6">
-        <div class="form-group" terrama2-show-errors>
-          <label><span></span>Band2:</label>
-          <input class="form-control" 
-                ng-model="$ctrl.model.metadata.band2" 
-                type="text">
-        </div>
-      </div>
+      
+    <div sf-schema="$ctrl.predefinedStyleSchema" sf-form="$ctrl.predefinedStyleForm" sf-model="$ctrl.model.metadata"></div>
 
   </div>
 </div>
