--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}AdminLTE/dist/css/AdminLTE.min.css">
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}AdminLTE/dist/css/skins/skin-black.min.css">
-    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}ol3/ol.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}openlayers/ol.css">
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}TerraMA2WebComponents.min.css">
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}dist/TerraMA2WebMonitor.min.css">
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}jquery-ui/themes/base/jquery-ui.min.css">
@@ -227,7 +227,7 @@
     <script type="text/javascript" src="{[ BASE_URL ]}jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}jquery-ui/jquery-ui.min.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}bootstrap-daterangepicker/daterangepicker.js"></script>
-    <script type="text/javascript" src="{[ BASE_URL ]}ol3/ol.js"></script>
+    <script type="text/javascript" src="{[ BASE_URL ]}openlayers/ol.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}socket.io/socket.io.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}datatables/media/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="{[ BASE_URL ]}datatables/media/js/dataTables.bootstrap.min.js"></script>
