--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -172,9 +172,9 @@
                       ng-disabled="ctrl.isUpdating"
                       data-ng-change="ctrl.onAnalysisTypeChanged()" 
                       required>
-                <!--<option value="{[ Enums.AnalysisType.DCP ]}">{{ i18n.__('DCP') }}</option>-->
-                <option value="{[ Enums.AnalysisType.GRID ]}">{{ i18n.__('Grid') }}</option>
+                <option value="{[ Enums.AnalysisType.DCP ]}">{{ i18n.__('DCP') }}</option>
                 <option value="{[ Enums.AnalysisType.MONITORED ]}">{{ i18n.__('Monitored Object') }}</option>
+                <option value="{[ Enums.AnalysisType.GRID ]}">{{ i18n.__('Grid') }}</option>
               </select>
 
               <span class="help-block" 
@@ -259,7 +259,7 @@
             </div>
           </div>
 
-          <div class="col-md-4" ng-show="ctrl.analysis.type_id != ctrl.AnalysisService.types.MONITORED">
+          <div class="col-md-4" ng-show="ctrl.analysis.type_id == ctrl.AnalysisService.types.GRID">
             <div class="form-group" terrama2-show-errors>
               <label>{{ i18n.__('Data Store') }}:</label>
               <ui-select name="storager_data_provider_id" ng-model="ctrl.analysis.data_provider_id" ng-required="ctrl.storager.format.name" required>
@@ -569,7 +569,7 @@
 
     <terrama2-box title="i18n.__('Influence Area')" 
                   css="ctrl.css" 
-                  ng-show="(ctrl.analysis.type_id == 1 || ctrl.hasDcp()) && forms.generalDataForm.type.$valid">
+                  ng-show="ctrl.hasDcp() && forms.generalDataForm.type.$valid">
       <div class="row">
         <div class="col-md-12">
           <form name="forms.influenceForm">
@@ -580,7 +580,7 @@
                   <select class="form-control"
                           name="influence"
                           ng-model="ctrl.analysis.metadata.INFLUENCE_TYPE"
-                          ng-required="ctrl.analysis.type_id == 1 || ctrl.hasDcp()">
+                          ng-required="ctrl.hasDcp()">
                     <option value="{[ Enums.InfluenceTypes.TOUCHES.Value ]}">{[ Enums.InfluenceTypes.TOUCHES.Name ]}</option>
                     <option value="{[ Enums.InfluenceTypes.CENTER.Value ]}">{[ Enums.InfluenceTypes.CENTER.Name ]}</option>
                     <option value="{[ Enums.InfluenceTypes.REGION.Value ]}">{[ Enums.InfluenceTypes.REGION.Name ]}</option>
@@ -702,13 +702,13 @@
           <div class="col-md-6">
             <!-- TerraMA² Functions Buttons -->
             <terrama2-analysis-helpers operators="ctrl.operators.utilities" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
-            <terrama2-analysis-helpers ng-if="ctrl.operators.attributes.data && ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.attributes" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction" add-class="ctrl.addClass"></terrama2-analysis-helpers>            
-            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.dcp" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
-            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.grid_monitored" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers ng-if="ctrl.operators.attributes.data && ctrl.analysis.type_id != {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.attributes" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction" add-class="ctrl.addClass"></terrama2-analysis-helpers>            
+            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id != {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.dcp" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id != {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.grid_monitored" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.grid" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.historical" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.forecast" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
-            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.occurrence" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id != {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.occurrence" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers operators="ctrl.operators.python" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
           </div>
         </div>
