fixing monitor calendar and improving layout

--- a/webapp/views/login.html
+++ b/webapp/views/login.html
@@ -7,6 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="shortcut icon" href="{[ BASE_URL ]}favicon.ico" type="image/x-icon" />
         <title>TerraMA²</title>
         <!-- Tell the browser to be responsive to screen width -->
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -55,7 +56,7 @@
     <body class="hold-transition login-page" ng-controller="TerraMA2Controller">
         <div class="login-box">
             <div class="login-logo">
-                <a href="#"><b>TerraMA²</b></a>
+                <a href="#"><img src="{[ BASE_URL ]}images/terrama2_logo.png"></a>
             </div><!-- /.login-logo -->
             <div class="login-box-body">
                 <p class="login-box-msg">
