--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -16,6 +16,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="shortcut icon" href="{[ BASE_URL ]}favicon.ico" type="image/x-icon" />
   <title>{% block title %} {% endblock %}</title>
   <!-- Defines responsive layout to screen -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
