--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="{[ BASE_URL ]}favicon.ico" type="image/x-icon" />
     <title>TerraMA² Monitor</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}bootstrap/dist/css/bootstrap.min.css">
