--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -163,6 +163,15 @@
                 </div>
               </div>
             </div>
+            <div id="animated-map-box">
+              <div class="animated-map-header">Animation<span class="btn btn-default" style="padding: 0 4px 0 4px; float: right;"><i class="fa fa-close"></i></span></div>
+              <div id="animated-map"></div>
+              <div role="group" aria-label="Animation controls">
+                <button id="play" type="button">Play</button>
+                <button id="pause" type="button">Pause</button>
+                <span id="info"></span>
+              </div>
+            </div>
           </div>
 
           <!-- Alert message -->
