[Partial] Animation box Component

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -82,6 +82,9 @@
               <div class="layer-toolbox-header">Layer Tools<span class="btn btn-default" style="padding: 0 4px 0 4px; float: right;"><i class="fa fa-close"></i></span></div>
               <div class="layer-toolbox-body">
                 <div class="layer-name"></div>
+                <div class="animate-layer">
+                  <button id="animate" type="button" class="btn btn-default" style="margin-top: 10px;">Animate Layer</button>
+                </div>
                 <hr style="margin: 10px 0 10px 0;"/>
                 <div id="slider-box"></div>
                 <div id="exportation-box">
@@ -163,7 +166,7 @@
                 </div>
               </div>
             </div>
-            <div id="animated-map-box">
+            <div id="animated-map-box" class="hidden">
               <div class="animated-map-header">Animation<span class="btn btn-default" style="padding: 0 4px 0 4px; float: right;"><i class="fa fa-close"></i></span></div>
               <div id="animated-map"></div>
               <div role="group" aria-label="Animation controls">
