--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -703,7 +703,8 @@
             <!-- TerraMA² Functions Buttons -->
             <terrama2-analysis-helpers operators="ctrl.operators.utilities" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers ng-if="ctrl.operators.attributes.data && ctrl.analysis.type_id != {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.attributes" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction" add-class="ctrl.addClass"></terrama2-analysis-helpers>            
-            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id != {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.dcp" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.MONITORED]}" operators="ctrl.operators.dcp" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
+            <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.DCP]}" operators="ctrl.operators.dcp_analysis" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id != {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.grid_monitored" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.grid" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
             <terrama2-analysis-helpers ng-if="ctrl.analysis.type_id == {[Enums.AnalysisType.GRID]}" operators="ctrl.operators.historical" target="ctrl.operatorValue" restriction="ctrl.analysisHelperRestriction"></terrama2-analysis-helpers>
