--- a/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
+++ b/webmonitor/public/stylesheets/TerraMA2WebMonitor.css
@@ -474,7 +474,39 @@ html, body, #content, .content, .content-wrapper, #terrama2-map {
   max-height: 350px;
 }
 
-.map-tool-button > button {
+.animate-tool-button {
+  z-index: 9999;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 2px;
+  bottom: 2px;
+  padding: 3px;
+  max-height: 350px;
+}
+
+#currentDate {
+  z-index: 9999;
+  position: absolute;
+  padding: 3px;
+  max-height: 350px;
+  left: 10px;
+  bottom: 2px;
+  background-color: rgba(0,0,0,.4);
+  border-radius: 2px;
+  height: 35px;
+  width: 140px;
+}
+
+#currentDate > label {
+  background-color: rgba(255,255,255,1);
+  margin-bottom: 0px !important;
+  height: 29px;
+  padding-top: 4px;
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
+.map-tool-button > button, .animate-tool-button > button {
   width: 29px;
   height: 29px;
   background-color: rgba(241,241,241,.8);
@@ -495,9 +527,9 @@ html, body, #content, .content, .content-wrapper, #terrama2-map {
   font-size: 21px !important;
 }
 
-.map-tool-button > button:hover { background-color: rgba(241,241,241,1); }
+.map-tool-button > button:hover, .animate-tool-button > button:hover { background-color: rgba(241,241,241,1); }
 
-.map-tool-button.active > button { background-color: rgba(255, 255, 255, 1); }
+.map-tool-button.active > button, .animate-tool-button > button { background-color: rgba(255, 255, 255, 1); }
 
 #map-tools {
   z-index: 999999;
@@ -520,6 +552,12 @@ html, body, #content, .content, .content-wrapper, #terrama2-map {
 #getAttributes { top: 290px; }
 
 #tableButton { top: 330px; }
+
+#reloadAnimation {left: 155px; }
+
+#playAnimation, #pauseAnimation {left: 195px;}
+
+#stopAnimation {left: 235px;}
 
 #getAttributes.with-select { width: 190px; }
 
@@ -627,7 +665,7 @@ html, body, #content, .content, .content-wrapper, #terrama2-map {
 
 #layer-toolbox { left: 21px; }
 
-#legend-box > .legend-header, #layer-toolbox > .layer-toolbox-header, #animated-map-box > .animated-map-header{
+#legend-box > .legend-header, #layer-toolbox > .layer-toolbox-header{
   padding: 10px;
   font-size: 15px;
   background-color: #d8d8d8;
@@ -646,18 +684,6 @@ html, body, #content, .content, .content-wrapper, #terrama2-map {
   height: calc(100% - 41px);
   top: 0;
   cursor: default;
-}
-
-#animated-map-box {
-  position: absolute;
-  background-color: white;
-  z-index: 99999;
-  border-radius: 5px;
-  border: 1px solid;
-  top: 21px;
-  left: 26px;
-  width: 620px;
-  height: 480px;
 }
 
 #exportation-box {
