Toolbox height fix

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -84,6 +84,9 @@
                 <div class="layer-name"></div>
                 <div id="animate-layer-box" class="hidden">
                   <hr style="margin: 10px 0 10px 0;"/>  
+                  <div style="text-align: center;">
+                    <label>Animation</label>
+                  </div>
                   <div role="group" aria-label="Animation controls" style="text-align: center;">
                     <button id="reload" type="button"><i class="fa fa-repeat"></i></button>
                     <button id="play" type="button"><i class="fa fa-play"></i></button>
