--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -162,7 +162,7 @@
               </div>
             </div>
             <div id="animate-tools" class="hidden">
-              <div id="currentDate"><label></label></div>
+              <div id="currentDate"><div><label></label></div></div>
               <div id="reloadAnimation" class="animate-tool-button mouse-function-btn"><button type="button"><i class="fa fa-repeat"></i></button></div>
               <div id="playAnimation" class="animate-tool-button mouse-function-btn"><button type="button"><i class="fa fa-play"></i></button></div>
               <div id="pauseAnimation" class="animate-tool-button mouse-function-btn hidden"><button type="button"><i class="fa fa-pause"></i></button></div>
