--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -92,7 +92,8 @@
                     <button id="play" type="button"><i class="fa fa-play"></i></button>
                     <button id="pause" type="button"><i class="fa fa-pause"></i></button>
                   </div>
-                  <div id="dates-slider" style="margin-top: 10px;"></div>
+                  <div id="dates-slider" style="margin-top: 10px;" class="hidden"></div>
+                  <div id="dates-calendar" style="margin-top: 10px;" class="hidden"></div>
                 </div>
                 <hr style="margin: 10px 0 10px 0;"/>
                 <div id="slider-box"></div>
