creating shapefile importation

--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -274,6 +274,8 @@
   <script src="{[ BASE_URL ]}bower_components/angular/angular.min.js"></script>
   <!-- Internationalization -->
   <script src="{[ BASE_URL ]}bower_components/i18n-node-angular/i18n-node-angular.js"></script>
+  <!-- ng-file-upload -->
+  <script src="{[ BASE_URL ]}bower_components/ng-file-upload/ng-file-upload.min.js"></script>
   <!-- Socket.io -->
   <script type="text/javascript" src="{[ BASE_URL ]}socket.io/socket.io.js"></script>
 
@@ -286,7 +288,7 @@
     BASE_URL = "{[ BASE_URL ]}";
   </script>
 
-  <script type="text/javascript" src="{[ BASE_URL ]}dist/terrama2-webapp.min.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}dist/terrama2-webapp.js"></script>
 
 </body>
 </html>
