Added user in project model to private the project

--- a/webapp/views/configuration/projects.html
+++ b/webapp/views/configuration/projects.html
@@ -12,7 +12,8 @@
 <script type="text/javascript">
   var configuration = {
     context: "{[context]}",
-    message: "{[ message ]}"
+    message: "{[ message ]}",
+    user_id: "{[ user_id ]}"
   };
 </script>
 
