adding support to https

--- a/webapp/views/configuration/providers.html
+++ b/webapp/views/configuration/providers.html
@@ -26,6 +26,7 @@
           return BASE_URL + "images/data-server/sftp/sftp.png";
           break;
         case "HTTP":
+        case "HTTPS":
           return BASE_URL + "images/data-server/http/http.png";
           break;
       }
