Checking permission to edit objects

--- a/webapp/views/configuration/analysis.html
+++ b/webapp/views/configuration/analysis.html
@@ -60,7 +60,8 @@
 
   var configuration = {
     analysis: {[ analysis|json|safe ]} || {},
-    projectId: {[ projectId ]}
+    projectId: {[ projectId ]},
+    hasPermissionToEdit: {[ hasPermissionToEdit|json|safe ]}
   };
 </script>
 
