--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -28,7 +28,8 @@
 
 <script>
   var configuration = {
-    view: {[ view|json|safe ]}
+    view: {[ view|json|safe ]},
+    hasPermissionToEdit: {[ hasPermissionToEdit|json|safe ]}
   };
   var globals = {
     enums: {
