--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -42,7 +42,8 @@
 <script>
   var configuration = {
     alert: {[ alert|json|safe ]},
-    disablePDF: {[ disablePDF ]}
+    disablePDF: {[ disablePDF ]},
+    hasPermissionToEdit: {[ hasPermissionToEdit|json|safe ]}
   };
 
   var globals = {};
