--- a/webapp/views/configuration/dataset.html
+++ b/webapp/views/configuration/dataset.html
@@ -124,7 +124,8 @@
       dataSeries: {[ dataSeries|json|safe ]},
       collector: {[ collector|json|safe ]},
       parametersData: {[ parametersData|json|safe ]},
-      dataSeriesType: "{[ type ]}"
+      dataSeriesType: "{[ type ]}",
+      hasPermissionToEdit: {[ hasPermissionToEdit|json|safe ]}
     }
   </script>
 
